Replace usage of FileUtils with JDK Files