@@ -3,9 +3,8 @@ package com.dylibso.chicory.fuzz;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 
 import com.dylibso.chicory.runtime.Module;
-import java.io.File;
-import java.nio.charset.StandardCharsets;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIf;
 
@@ -23,9 +22,7 @@ public class SingleReproTest extends TestModule {
     @Test
     @EnabledIf("enableSingleReproducer")
     void singleReproducer() throws Exception {
-        var seed =
-                FileUtils.readFileToString(
-                        new File(System.getenv(CHICORY_FUZZ_SEED_KEY)), StandardCharsets.UTF_8);
+        var seed = Files.readString(Paths.get(System.getenv(CHICORY_FUZZ_SEED_KEY)));
         var types = InstructionTypes.fromString(System.getenv(CHICORY_FUZZ_TYPES_KEY));
         var targetWasm =
                 smith.run(seed.substring(0, Math.min(seed.length(), 32)), "test.wasm", types);
